--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,13 +13,45 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&family=Merriweather&family=Montserrat&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap"
             rel="stylesheet"
         />
-
+        <link rel="stylesheet" href="css/styles.css" />
         <title>Frontend Mentor | Space tourism website</title>
     </head>
     <body>
-
+        <div class="top-container">
+            <img src="/starter-code/assets/shared/logo.svg" alt="logo-img" />
+            <hr />
+            <ul>
+                <li>
+                    <a href="#"><strong>00</strong> Home</a>
+                </li>
+                <li>
+                    <a href="#"><strong>01</strong> Destination</a>
+                </li>
+                <li>
+                    <a href="#"><strong>02</strong> Crew</a>
+                </li>
+                <li>
+                    <a href="#"><strong>03</strong> Technology</a>
+                </li>
+            </ul>
+        </div>
+        <div class="middle-container">
+            <div class="left-side">
+                <h5>SO, YOU WANT TO TRAVEL TO</h5>
+                <h1>SPACE</h1>
+                <p>
+                    Let’s face it; if you want to go to space, you might as well
+                    genuinely go to outer space and not hover kind of on the
+                    edge of it. Well sit back, and relax because we’ll give you
+                    a truly out of this world experience!
+                </p>
+            </div>
+            <div class="explore">
+                <h4>EXPLORE</h4>
+            </div>
+        </div>
     </body>
 </html>
